# sdl3_game

./: CMakeLists.txt  main.cpp
src/: Renderer.cpp  Renderer.h  renderer.cpp  renderer.h
src/components/: GameObject.cpp  GameObject.h  Sprite.cpp  Sprite.h  gameobject.cpp  gameobject.h  sprite.cpp  sprite.h
src/data/: TileData.h  Transform.h
src/managers/: App.cpp  App.h  GameManager.cpp  GameManager.h  InputHandler.cpp  InputHandler.h
src/objects/: Entity.cpp  Entity.h  GameObject.cpp  GameObject.h
src/objects/components/: BoxColliderComponent.cpp  BoxColliderComponent.h  Component.cpp  Component.h  GravityComponent.cpp  GravityComponent.h  PlayerControlsComponent.cpp  PlayerControlsComponent.h  SpriteComponent.cpp  SpriteComponent.h
src/objects/components/player/: PlayerControlsComponent.cpp  PlayerControlsComponent.h
